tests/should_succeed/return_void.jou
cdecl putchar(ch: int) -> int

def foo() -> void:
    putchar('h')
    putchar('i')
    putchar('\n')

def should_do_nothing(skip: bool) -> void:
    return
    putchar('x')  # Warning: this code will never run

def main() -> int:
    should_do_nothing(True)
    foo()  # Output: hi
    return 0
