tests/syntax_error/double_not.jou
def main() -> int:
    x = False
    y = not not x  # Error: 'not' cannot be repeated
    return 0
